# demography

./: LICENSE  README.md  pyproject.toml  requirements.txt
utils/: descriptive_statistics.py  explore_data.py  get_data_from_emiss.py
