[project]
name = "rosstat_demography"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Пашкова Дарья Андреевна", email = "st087105@student.spbu.ru"},
]
dependencies = [
    "plotly>=6.1.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "requests>=2.32.3",
    "xlrd>=2.0.1",
    "nbformat>=5.10.4",
    "scipy>=1.15.3",
    "pydantic>=2.11.5",
    "openpyxl>=3.1.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
